--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.11.13",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.5",
+    "eslint": "^8.46.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
